Fix: toast messages are no longer hidden behind filter side panel

--- a/src/app/shared/components/toast/toast.component.css
+++ b/src/app/shared/components/toast/toast.component.css
@@ -9,6 +9,14 @@
   z-index: 999;
 }
 
+.toast-location {
+  right: 5px;
+}
+
+.toast-location-offset {
+  right: 305px;
+}
+
 .close-icon {
   position: absolute;
   right: 0;
